	- Add an option to save the image from plot_summary.py with a transparent background.
- AI / WM:
	- Fix max collision avoidance strength in AI GUI.
	- Fix NRE when adjusting autotuning fields in the SPH.
	- AI will no longer dive into missiles approaching from directly below.
	- Reset the auto-tune PID values to the best ones when lowering the learning rate.
  - Add a keybind for arming/disarming the WM.
- Detectors
	- Fix radars/IRSTs with ability to detect/lock targets with a signature of 0 not being able to detect/lock targets with a signature of 0.
	- Fix a division by zero in the standoff jamming effect calculation when the radar signature is 0.
- Weapons:
	- Fix bug in nuke impulse calculation and some NREs.
	- Add new engineFailureRate (default is 0, max is 1) config file variable for missiles. This is the probability the missile engine will fail to start. It is evaluated once on missile launch.
	- Add new guidanceFailureRate (default is 0, max is 1) config file variable for missiles. This is the probability missile guidance will fail. It is evaluated every frame after launch.
- RWP:
	- Reset the killer GM between competitions and don't enable the killer GM for S5R3 (the altitude limit is still active).

v1.5.7.0
IMPROVEMENTS / FIXES
- General:
	- Add option in BDA settings menu to set a max HP limit for parts.
	- Armor Tool in the VAB/SPH renamed to BDA Craft Utilities Tool.
	- Added experimental 0-100% indication of stacked lift surfaces to the BDA Craft Utilities Tool.
- AI / WM:
	- Fix bug in collision avoidance that sometimes resulted in more collisions between teammates.
	- Add action group to the WM for removing EVA kerbals' helmets (once the vessel becomes the active one).
	- Re-centre between epochs during auto-tuning if the vessel drifts more than 15km from the start position.
- Detectors: