@@ -60,7 +60,7 @@ PART
 		decoupleSpeed = 5
 
 		engineFailureRate = 0    // Probability the missile engine will fail to start (0-1), evaluated once on missile launch
-		guidanceFailureRate = 0  // Probability the missile guidance will fail (0-1), evaluated every frame after launch
+		guidanceFailureRate = 0  // Probability the missile guidance will fail per second (0-1), evaluated every frame after launch
 
 		audioClipPath = BDArmory/Sounds/rocketLoop
 		exhaustPrefabPath = BDArmory/Models/exhaust/smallExhaust
@@ -104,5 +104,6 @@ PART
 		name = BDExplosivePart
 		tntMass = 25
 		warheadType = ContinuousRod
+		fuseFailureRate = 0	// How often the explosive fuse will fail to detonate (0-1), evaluated once on detonation trigger
 	}
 }
