@@ -72,7 +72,7 @@ PART
         torqueRampUp = 50
 
         engineFailureRate = 0    // Probability the missile engine will fail to start (0-1), evaluated once on missile launch
-		guidanceFailureRate = 0  // Probability the missile guidance will fail (0-1), evaluated every frame after launch
+		guidanceFailureRate = 0  // Probability the missile guidance will fail per second (0-1), evaluated every frame after launch
 
         homingType = aam
         missileType = missile
@@ -144,5 +144,6 @@ PART
         name = BDExplosivePart
         tntMass = 15
         warheadType = ContinuousRod
+        fuseFailureRate = 0	// How often the explosive fuse will fail to detonate (0-1), evaluated once on detonation trigger
     }
 }
