@@ -53,6 +53,7 @@ maxTemp = 3400
 	{
 		name = BDExplosivePart
 		tntMass = 150
+		fuseFailureRate = 0	// How often the explosive fuse will fail to detonate (0-1), evaluated once on detonation trigger
 	}
 
 }
