@@ -12,14 +12,15 @@
 	- Fix NRE when adjusting autotuning fields in the SPH.
 	- AI will no longer dive into missiles approaching from directly below.
 	- Reset the auto-tune PID values to the best ones when lowering the learning rate.
-  - Add a keybind for arming/disarming the WM.
+	- Add a keybind for arming/disarming the WM.
 - Detectors
 	- Fix radars/IRSTs with ability to detect/lock targets with a signature of 0 not being able to detect/lock targets with a signature of 0.
 	- Fix a division by zero in the standoff jamming effect calculation when the radar signature is 0.
 - Weapons:
 	- Fix bug in nuke impulse calculation and some NREs.
 	- Add new engineFailureRate (default is 0, max is 1) config file variable for missiles. This is the probability the missile engine will fail to start. It is evaluated once on missile launch.
-	- Add new guidanceFailureRate (default is 0, max is 1) config file variable for missiles. This is the probability missile guidance will fail. It is evaluated every frame after launch.
+	- Add new guidanceFailureRate (default is 0, max is 1) config file variable for missiles. This is the probability per second the missile guidance will fail (0-1). It is evaluated every frame after launch.
+	- Add new fuseFailureRate (default is 0, max is 1) config file variable for BDExplosivePart modules. This is the probability the explosive fuse will fail. It is evaluated once when an explosive attempts to detonate.
 - RWP:
 	- Reset the killer GM between competitions and don't enable the killer GM for S5R3 (the altitude limit is still active).
 
